samplez-ns01/application-04/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fusionx
spec:
  http:
  - match:
    - uri:
        prefix: /sample-application-04
    route:
    - destination:
        host: sample-application-04.sample-deployment.svc.cluster.local
        port:
          number: 8080
